Fix about me text displaying in the wrong color

--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ h1 {
   margin: 0 6px;
   padding: 0 6px;
   font-size: 1.25rem;
+  color: rgb(105, 105, 105);
 }
 
 .icons {
